--- a/app_wifi/index.html
+++ b/app_wifi/index.html
@@ -92,7 +92,10 @@
   <script src="js/HelperComputerHistoryCtrl.js"></script>
   <script src="js/HelperComputerDetailsCtrl.js"></script>
   <script src="js/HelperOfficeCtrl.js"></script>
+  <script src="js/HelperPropertyRepairCtrl.js"></script>
   <script src="js/HelperPropertyCtrl.js"></script>
+  <script src="js/HelperPropertyHistoryCtrl.js"></script>
+  <script src="js/HelperPropertyDetailsCtrl.js"></script>
   <script src="js/HelperWaterCtrl.js"></script>
   <script src="js/WaterSuccessCtrl.js"></script>
   <script src="js/WaterInputCtrl.js"></script>
@@ -118,6 +121,7 @@
       });
   </script>
   <script src="js/dingtalk.js"></script>
+  <script src="service-worker.js"></script>
 
   <!--组件-->
   <!--<script src="js/ionic-image-lazy-load.js"></script>-->
